fix batching to count round trips